# gpumetropolis

./: .Rbuildignore  .gitignore  CATALOG_DESIGN.md  CRAN-SUBMISSION  DESCRIPTION  EXPERIMENT_PROTOCOL.md  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  README.md  ROADMAP.md  cran-comments.md
R/: adaptive.R  api.R  bayes.R  conjugate.R  crlb.R  diagnose.R  diagnostics.R  dsl.R  extendr-wrappers.R  gpumetropolis-package.R  plots.R  sampler.R  timeseries.R  zzz.R
benchmark/: ENVIRONMENT.md  README.md  analyze.R  analyze_m234.R  capture_env.sh  cell_map.csv  full_m1_cell_summary.csv  full_m234_cell_summary.csv  generate_cell_map.R  harness_util.R  m2_pt_summary.csv  opt_baseline.R  opt_highdim.R  opt_highdim_fhd_r1.csv  opt_highdim_fhd_r2.csv  opt_highdim_fhd_r3.csv  opt_highdim_hd_r1.csv  opt_highdim_hd_r2.csv  opt_highdim_hd_r3.csv  opt_highdim_probe.csv  opt_highdim_probe2.csv  opt_results_baseline.csv  opt_results_exact_median.csv  opt_results_exact_r1.csv  opt_results_exact_r2.csv  opt_results_exact_r3.csv  opt_results_f52r1.csv  opt_results_f52r2.csv  opt_results_f52r3.csv  opt_results_m52r1.csv  opt_results_m52r2.csv  opt_results_m52r3.csv  opt_results_median3.csv  opt_results_optimized.csv  opt_results_optimized2.csv  opt_results_r1.csv  opt_results_r2.csv  opt_results_r3.csv  opt_results_v052_median.csv  opt_results_v3median.csv  (+15 more)
man/: ess.Rd  gaussian_mean_posterior.Rd  gpu_metropolis.Rd  gpum_bayes_factor.Rd  gpum_crlb.Rd  gpum_density_compare.Rd  gpum_diagnose.Rd  gpum_evidence.Rd  gpum_hypothesis.Rd  gpum_lfo.Rd  gpum_lm.Rd  gpum_loo.Rd  gpum_model.Rd  gpum_pairs.Rd  gpum_ppc.Rd  gpum_region.Rd  gpum_rope.Rd  gpum_surface.Rd  gpum_ts_model.Rd  gpum_waic.Rd  gpumetropolis-package.Rd  hdi.Rd  ks_equivalence.Rd  metropolis_gaussian_mean.Rd  rhat.Rd
src/: Makevars.in  Makevars.win.in  entrypoint.c  gpumetropolis-win.def
src/rust/: Cargo.toml  document.rs  vendor.tar.xz
src/rust/src/: chain_kernel.rs  cpu_native.rs  gpu.rs  interp.rs  jit.rs  lib.rs  model.rs  sampler.rs
tools/: config.R
(+43 files in other folders)
