[package]
name = 'gpumetropolis'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'rlib', 'staticlib' ]
name = 'gpumetropolis'

[[bin]]
name = 'document'
path = 'document.rs'

[dependencies]
extendr-api = '0.9.0'
rand = '=0.8.5'
rand_distr = '=0.4.3'
rand_pcg = '=0.3.1'

[profile.release]
lto = true
codegen-units = 1
