[package]
name = 'gpumetropolis'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.85'

[lib]
crate-type = [ 'rlib', 'staticlib' ]
name = 'gpumetropolis'

[[bin]]
name = 'document'
path = 'document.rs'

[dependencies]
extendr-api = '0.9.0'
rand = '=0.8.5'
rand_distr = '=0.4.3'
rand_pcg = '=0.3.1'
cubecl = { version = '0.10.0', features = ['cpu', 'cuda'] }

[profile.release]
# LTO is disabled during development for build speed; the CubeCL dependency
# tree is large. Revisit the release profile before the CRAN build.
lto = false
codegen-units = 16
