[package]
name = 'gpumetropolis'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.85'

[lib]
crate-type = [ 'rlib', 'staticlib' ]
name = 'gpumetropolis'

[[bin]]
name = 'document'
path = 'document.rs'

[dependencies]
extendr-api = '0.9.0'
rand = '=0.8.5'
rand_distr = '=0.4.3'
rand_pcg = '=0.3.1'
rayon = '1'
cubecl = '0.10.0'
cranelift = "0.121.2"
cranelift-jit = "0.121.2"
cranelift-module = "0.121.2"

[features]
# The default build is CPU only and needs no GPU toolchain, so CRAN and CI
# machines can build it. The GPU backends are opt-in: the cuda feature needs
# the CUDA toolkit at build time, the vulkan feature a Vulkan loader.
default = []
cuda = ['cubecl/cuda']
vulkan = ['cubecl/wgpu']

[profile.release]
# LTO is disabled during development for build speed; the CubeCL dependency
# tree is large. Revisit the release profile before the CRAN build.
lto = false
codegen-units = 16
